--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "require": {
         "php": "^7.4 || ^8.0",
         "phpunit/phpunit": "9.5.x-dev",
-        "pimple/pimple": "3.0"
+        "pimple/pimple": "3.0",
+        "ext-mbstring": "*"
     }
 }
